<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/taucoin_tests"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_below="@+id/textView2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fun_import_key_init"
            android:layout_weight="1"
            android:id="@+id/keyButton"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fun_sync_block"
            android:layout_weight="1"
            android:id="@+id/syncButton"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_send"
            android:id="@+id/sendButton"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_mining_start"
            android:id="@+id/miningButton"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>
