<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".KeyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:textColor="@color/background_material_dark"
        android:text="@string/fun_import_key_init"/>

    <EditText
        android:id="@+id/privateKeyET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:hint="Paste private key here"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="clear"
            android:id="@+id/clearButton"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_import"
            android:id="@+id/importButton"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_import_init"
            android:id="@+id/initButton"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>